--- a/index.html
+++ b/index.html
@@ -26,20 +26,20 @@
         	$.mobile.pushStateEnabled = false;
 					$.mobile.changePage.defaults.changeHash = false;
     	});
-		//	function page_load() {
-			//        setTimeout(function(){
-			  //          if (readCookie("region")) {
-					//						console.log("there is a region cookie")
-						//					app_id = "app1coUtTecDQTZuF";
-							//				region_to_filter();
-			          //  } else {
-									//		console.log("there is NOT a region cookie")
-			                // call function to get list of regions
-										//	app_id = "app1coUtTecDQTZuF";
-									//		load_regions();
-			          //  }
-			       // }, 1000);
-		//	}
+			function page_load() {
+			        setTimeout(function(){
+			            if (readCookie("region")) {
+											console.log("there is a region cookie")
+											app_id = "app1coUtTecDQTZuF";
+											region_to_filter();
+			            } else {
+											console.log("there is NOT a region cookie")
+			              //   call function to get list of regions
+											app_id = "app1coUtTecDQTZuF";
+											load_regions();
+			            }
+			        }, 1000);
+			}
 			function region_to_filter(){
 				createCookie('region','cape',365*100);
 				load_first();
