--- a/index.html
+++ b/index.html
@@ -36,14 +36,14 @@
 											console.log("there is NOT a region cookie")
 			              //   call function to get list of regions
 											app_id = "app1coUtTecDQTZuF";
-											load_regions();
+				//							load_regions();
 			            }
 			        }, 1000);
 			}
-			function region_to_filter(){
-				createCookie('region','cape',365*100);
-				load_first();
-			}
+	//		function region_to_filter(){
+		//		createCookie('region','cape',365*100);
+			//	load_first();
+			//}
 	</script>
 	<script src="https://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.js"></script>
 	<script>
