--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 											console.log("there is NOT a region cookie")
 			              //   call function to get list of regions
 											app_id = "app1coUtTecDQTZuF";
-				//							load_regions();
+											load_regions();
 			            }
 			        }, 1000);
 			}
