--- a/index.html
+++ b/index.html
@@ -34,16 +34,16 @@
 											region_to_filter();
 			            } else {
 											console.log("there is NOT a region cookie")
-			              //   call function to get list of regions
+			             	//   call function to get list of regions
 											app_id = "app1coUtTecDQTZuF";
 											load_regions();
 			            }
 			        }, 1000);
 			}
-	//		function region_to_filter(){
-		//		createCookie('region','cape',365*100);
-			//	load_first();
-			//}
+			function region_to_filter(){
+				createCookie('region','cape',365*100);
+				load_first();
+			}
 	</script>
 	<script src="https://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.js"></script>
 	<script>
@@ -175,8 +175,16 @@
 
 	<div data-role="content" id="regions" class="content">
 		<p>Choose the region for desired program.</p>
-
 	</div>
+	
+	<div id="regionz">
+	<ul>
+  		<li v-for="item in items">
+    		{{ item.message }}
+  		</li>
+	</ul>
+	</div>
+	
 </div>
 
 
@@ -352,10 +360,11 @@
 
 	var app_id = "";
 
-var data;
-var x = [];
-function load_region_list() {
-	axios.get(
+
+	var data;
+	var x = [];
+	function load_region_list() {
+		axios.get(
 	             'https://api.airtable.com/v0/'+meta_app_id+'/Meta Data/?sort[0][field]=State',
 	            {
 	              headers: { Authorization: "Bearer "+app_key }
@@ -372,8 +381,18 @@ function load_region_list() {
 	              console.log(error)
 	          })
 	return x;
-}
+	}
 
+	var regionz = new Vue({
+  		el: '#regionz',
+		data: {
+			items: [
+				{ message: 'Eastern' },
+				{ message: 'Western' }
+			]
+		}
+	})
+	
 	var region_names = load_region_list();
 
 	var cat_names = [];
@@ -384,6 +403,8 @@ function load_region_list() {
 	var categories = "";
 	var ages = "";
 	var work = 0;
+	
+
 
 	function load_regions() {
 			console.log("LOAD REGIONS")
@@ -537,12 +558,12 @@ function load_region_list() {
       	$("#detail").html($("#detail").html() + "<h3>{{ item['fields']['Name'] }}</h3>")
       	$("#detail").html($("#detail").html() + "<h4>{{ item['fields']['Category'] }}</h4>");
       	$("#detail").html($("#detail").html() + "<p><b>Ages:</b> {{ item['fields']['Minimum Age'] }}-{{ item['fields']['Maximum Age'] }} &nbsp;&nbsp; <b>Gender(s):</b> {{ item['fields']['Gender'] }}</p>");
-				$("#detail").html($("#detail").html() + "<p><b>Phone:</b> <a v-bind:href=\"'tel:'+item['fields']['Phone']\" target=\"_blank\">{{ item['fields']['Phone'] }}</p>");
-				$("#detail").html($("#detail").html() + "<p><b>Email:</b> <a v-bind:href=\"'mailto:'+item['fields']['Email']\" target=\"_blank\">{{ item['fields']['Email'] }}</a></p>");
+		$("#detail").html($("#detail").html() + "<p><b>Phone:</b> <a v-bind:href=\"'tel:'+item['fields']['Phone']\" target=\"_blank\">{{ item['fields']['Phone'] }}</p>");
+		$("#detail").html($("#detail").html() + "<p><b>Email:</b> <a v-bind:href=\"'mailto:'+item['fields']['Email']\" target=\"_blank\">{{ item['fields']['Email'] }}</a></p>");
       	$("#detail").html($("#detail").html() + "<p><b>Website:</b> <a v-bind:href=\"item['fields']['Website']\" target=\"_blank\">{{ item['fields']['Website'] }}</a></p>");
       	$("#detail").html($("#detail").html() + "<p><b>Address:</b> <a v-bind:href=\"'https://www.google.com/maps/place/'+item['fields']['Address']\" target=\"_blank\">{{ item['fields']['Address'] }}</a></p>");
       	$("#detail").html($("#detail").html() + "<p><b>Description:</b> {{ item['fields']['Description'] }}</p>");
-				$("#detail").html($("#detail").html() + "<p><b>Valid As Of:</b> {{ item['fields']['Valid As Of'] }}</p>");
+		$("#detail").html($("#detail").html() + "<p><b>Valid As Of:</b> {{ item['fields']['Valid As Of'] }}</p>");
 
 			load_api_data('#details',3,id);
 
